<resources>
    <string name="app_name" translatable="false">SafeShe</string>
    <string name="app_moto">Your safety in your hands</string>
    <string name="onboarding_slide1_title">Welcome to SafeShe</string>
    <string name="onboarding_slide1_subtitle">Your personal guardian app for women\'s safety</string>
    <string name="onboarding_slide1_desc">SafeShe empowers and protects you. Let\'s start your journey toward safety and peace of mind.</string>
    <string name="onboarding_slide2_title">Your Safety, Your Way</string>
    <string name="onboarding_slide2_subtitle">Customized protection at your fingertips</string>
    <string name="onboarding_slide2_desc">Tailor SafeShe to your preferences, choosing the features that matter most.</string>
    <string name="onboarding_slide3_title">A Supportive Community</string>
    <string name="onboarding_slide3_subtitle">Be more independent and feel the happiness</string>
    <string name="onboarding_slide3_desc">Join our community of strong women, access resources, and stand together for safety and empowerment.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="email_verification">Please verify your email</string>
    <string name="email_verification_description"><![CDATA[You\'re almost there! We sent an email to <b>%s</b><br /><br />Just click on the link in that email to complete your signup. If you don\'t see it, you may need to <b>check your spam</b> folder.]]></string>
    <string name="email_reset">Please check your email</string>
    <string name="email_reset_description"><![CDATA[You\'re almost there! We sent an email to <b>%s</b><br /><br />Just click on the link in that email to reset your password. If you don\'t see it, you may need to <b>check your spam</b> folder.]]></string>
    <string name="notification_channel_push">Push notification</string>
    <string name="notification_channel_push_desc">Push notification</string>
    <string name="notification_channel_emergency">Emergency mode</string>
    <string name="notification_channel_emergency_desc">Emergency alert service</string>
    <string name="notification_emergency_mode">%s is now in Emergency Mode</string>
    <string name="sos_message">Hey %s,\nI\'m in Danger!\nMy location: %s</string>
    <string name="sos_notification">I\'m in Danger! My location: %s</string>
    <string name="btn_start_service">Start Shake Detection</string>
    <string name="btn_stop_service">Stop Shake Detection</string>
    <string name="activity_home_title">Welcome</string>
    <string name="activity_home_desc">%s!</string>
    <string name="activity_profile_title">Profile</string>
    <string name="activity_profile_desc">Manage your account information</string>
    <string name="activity_edit_profile_title">Edit Profile</string>
    <string name="activity_edit_profile_desc">Change account information</string>
    <string name="activity_contacts_title">Contacts</string>
    <string name="activity_contacts_desc">Quick access to trusted contacts</string>
    <string name="activity_helpline_title">Helpline</string>
    <string name="activity_helpline_desc">Support from local authorities</string>
    <string name="activity_settings_title">Settings</string>
    <string name="activity_settings_desc">Customize your safety experience</string>
    <string name="activity_safety_tips_title">Safety tips</string>
    <string name="activity_safety_tips_desc">Access a wealth of safety resources</string>
    <string name="activity_video_tutorials_title">Video Tutorials</string>
    <string name="activity_video_tutorials_desc">Learn self-defense techniques and safety measures.</string>
    <string name="activity_safety_gadgets_title">Safety Gadgets</string>
    <string name="activity_safety_gadgets_desc">Discover the latest personal safety tools.</string>
    <string name="activity_about_title">About</string>
    <string name="activity_about_desc">Learn more about our mission</string>
    <string name="activity_report_incident_title">Report Incident</string>
    <string name="activity_report_incident_desc">Quickly report any incidents and alert your contacts.</string>
    <string name="activity_incident_history_title">Incident History</string>
    <string name="activity_incident_history_desc">Review your previously reported incidents below.</string>
    <string name="activity_chatbot_title">Chatbot</string>
    <string name="activity_chatbot_desc">Engage with our chatbot for real-time assistance.</string>
    <string name="activity_feedback_title">Feedback</string>
    <string name="activity_feedback_desc">Share your experience with us</string>
    <string name="background_story">In recent years, we\'ve witnessed a surge in incidents targeting women, children, and the elderly. These atrocities have grown increasingly alarming, urging us to seek a solution. Introducing SafeShe, our innovative response to these challenges.\n\nSafeShe empowers you by putting your safety back into your hands. We\'ve developed a comprehensive SMS Alert system that keeps your family and friends informed during times of distress.</string>
    <string name="whats_good">What\'s Good About This App?</string>
    <string name="intuitive_design">Intuitive Design</string>
    <string name="intuitive_design_desc">Experience seamless navigation through our app, designed with the principles of material design, ensuring both functionality and aesthetics.</string>
    <string name="effortless_registration">Effortless Registration</string>
    <string name="effortless_registration_desc">Join our community swiftly with our hassle-free, multi-option registration process. Your safety is just moments away.</string>
    <string name="automatic_alerts">Automatic Alerts</string>
    <string name="automatic_alerts_desc">SafeShe automatically provides you with an instant lifeline. A simple press of the SOS button sends automated SMS alerts to your selected contacts, including your precise location.</string>
    <string name="meet_the_developer">Meet The Developer</string>
    <string name="dev_name">Khushi Vishwakarma</string>
    <string name="dev_bio">Passionate Android Developer\nA Learning Student </string>
    <string name="github">Github</string>
    <string name="contact_empty">Contact list is empty</string>
    <string name="new_name">New name</string>
    <string name="new_phone">New phone</string>
    <string name="btn_save">Save</string>
    <string name="sos">SOS</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in">Please sign in to your account first</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="btn_edit_profile">Edit profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="btn_log_out">Log out</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_your_account">Create your account and start your journey</string>
    <string name="full_name">Full name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="btn_register">Register</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="phone_number">Phone number</string>
    <string name="btn_add_contact">Add contact</string>
    <string name="details">Details</string>
    <string name="btn_close">Close</string>
    <string name="please_wait">Please Wait</string>
    <string name="shake_detection">Shake detection</string>
    <string name="shake_detection_desc">Send SOS when you shake your phone. This requires accelerometer sensor.</string>
    <string name="theme_switch">Dark Mode</string>
    <string name="theme_switch_desc">Toggle between light and dark themes</string>
    <string name="send_sms">Send SMS</string>
    <string name="send_sms_desc">Use SMS service to send SOS. Carrier charges may apply.</string>
    <string name="send_notification">Send notification</string>
    <string name="send_notification_desc">Use Notification service to send SOS. Your contacts must have account.</string>
    <string name="play_siren">Play siren</string>
    <string name="play_siren_desc">Play fake police siren at full volume in emergency mode.</string>
    <string name="call_emergency_service">Call emergency service</string>
    <string name="call_emergency_service_desc">Automatically call national emergency service in emergency mode.</string>
    <string name="send_nearby_alerts">Send Emergency SMS to Nearby Police And Hospitals</string>
    <string name="send_nearby_alerts_desc">Automatically notify nearby emergency services during SOS.</string>
    <string name="btn_resend_email">Resend Email</string>
    <string name="dev_github_link" translatable="false">https://github.com/shiv0210</string>
    <string name="remove_contact_confirmation">Are you sure you want to remove this contact?</string>
    <string name="contact_removed_successfully">Contact removed successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="details_saved_successfully">Details saved successfully</string>
    <string name="service_started">Service Started!</string>
    <string name="service_stopped">Service Stopped!</string>
    <string name="unknown_user">Unknown user</string>
    <string name="permission_must_be_granted">Permission Must Be Granted!</string>
    <string name="grant">Grant</string>
    <string name="verification_email_sent">Verification email sent</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="email_is_required">Email is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="gps_is_not_enabled">GPS is not enabled</string>
    <string name="getting_location">Getting location…</string>
    <string name="failed_to_get_location">Failed to get location</string>
    <string name="please_enter_your_full_name">Please enter your full name</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="please_enter_a_valid_phone_number">Please enter a valid phone number</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="please_enter_your_password_again">Please enter your password again</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="password_constraints">Password must contain at least 8 characters, 1 digit, 1 lower case letter, 1 upper case letter and no white spaces</string>
    <string name="report_incident_title">Report an Incident</string>
    <string name="incident_type_label">Incident Type</string>
    <string name="incident_description_hint">Describe the incident</string>
    <string name="submit_report_button">Submit Report</string>
    <string name="incident_type">Incident Type:</string>
    <string name="incident_description">Description:</string>
    <string name="incident_timestamp">Reported On:</string>
    <string name="rate_experience">Rate your experience</string>
    <string name="enter_feedback">Enter your feedback...</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="feedback_success">Thank you for your feedback!</string>
</resources>