<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:padding="16dp"
    tools:context=".ui.fragment.FeedbackFragment">

    <!-- Header Section -->
    <include
        android:id="@+id/header"
        layout="@layout/view_header_expandable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Feedback Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edittext"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Feedback Title -->
            <TextView
                android:id="@+id/feedback_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:text="@string/activity_feedback_title"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/feedback_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/activity_feedback_desc"
                android:textColor="@color/text_color_secondary"
                android:textSize="20dp" />

            <!-- User Name Input -->
            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="10dp" />

            <!-- Email Input -->
            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <!-- Feedback Input -->
            <EditText
                android:id="@+id/editText_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/edit_text_background"
                android:gravity="top"
                android:hint="@string/enter_feedback"
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_score"
                android:paddingBottom="8dp"
                android:text="@string/rate_experience"
                android:textColor="@color/text_color_secondary"
                android:textSize="20dp"
                android:textStyle="bold" />

            <!-- Rating Bar -->
            <RatingBar
                android:id="@+id/ratingBar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="0"
                android:stepSize="1.0" />


            <!-- Submit Button -->
            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/Blue"
                android:padding="12dp"
                android:text="@string/submit_feedback"
                android:textColor="@android:color/white"
                app:cornerRadius="10dp" />

            <!-- Feedback Success Message -->
            <TextView
                android:id="@+id/feedback_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/feedback_success"
                android:textColor="@android:color/holo_green_dark"
                android:visibility="gone" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
