<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/incident_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incident_type"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tag_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="4dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@drawable/bg_incident_tag"/>

        <TextView
            android:id="@+id/incident_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incident_description"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/incident_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/incident_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incident_timestamp"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
